# smartbrowser

./: .gitignore  README.md  hello.py  history.json  main.spec  pyproject.toml  requirements.txt  ressources.md  test.md
src/smartbrowser/: handler.py  hello.py  llms.py  main.py  ui.py  util.py
tests/: test_context_manager.py  test_fileexplorer.py  test_literal.py
