[project]
name = "smartbrowser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "browser-use>=0.1.36",
    "langchain-mistralai>=0.2.10",
    "langchain-ollama>=0.2.2",
    # Add missing langchain subpackages
]

[dependency-groups]
dev = [
    "pyinstaller>=6.12.0",
    "pytest>=8.3.4",
]
